--- a/she_codes_news/news/templates/news/story.html
+++ b/she_codes_news/news/templates/news/story.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block stylesheerts %}
-<link rel="stylesheet" type="text/css" href="{static 'news/styles.css'%}">
+{% block stylesheets %}
+<link rel="stylesheet" type="text/css" href="{% static 'news/styles.css'%}">
 {% endblock %}
 
 {% block content %} 
