--- a/she_codes_news/news/templates/news/index.html
+++ b/she_codes_news/news/templates/news/index.html
@@ -5,9 +5,13 @@
 <link rel="stylesheet" type="text/css" href="{% static 'news/styles.css' %}" />
 {% endblock %} 
 
+
+
 {% block content %}
 
 <h2>Latest News</h2>
+<h4><a href="{% url 'news:newStory' %}">Write New story</a></h4>
+
 
 <div id="latest-stories">
   {% if latest_stories %}
