adding user profile

--- a/she_codes_news/users/templates/registration/login.html
+++ b/she_codes_news/users/templates/registration/login.html
@@ -10,4 +10,8 @@
     <button type="submit">Login</button>
 </form>
 
+<h2>Register</h2>
+
+<a href="{% url 'users:createAccount' %}">Create Account</a>
+
 {% endblock %}
