--- a/she_codes_news/news/templates/news/index.html
+++ b/she_codes_news/news/templates/news/index.html
@@ -9,7 +9,10 @@
 
 {% block content %}
 
+{% if request.user.is_authenticated %}
 <a href="{% url 'news:newStory' %}">Write New story</a>
+
+{% endif %} 
 
 <h2>Latest News</h2>
 
