showed user story by primary key

--- a/she_codes_news/templates/base.html
+++ b/she_codes_news/templates/base.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <title>She Codes News</title>
     <meta name="description" content="" />
-    <meta name="author" content="Aleksandr Simic" />
+    <meta name="author" content="Aleksandra Simic" />
     <link
       href="https://fonts.googleapis.com/css?family=Manjari&display=swap"
       rel="stylesheet"
