--- a/she_codes_news/users/templates/users/userProfile.html
+++ b/she_codes_news/users/templates/users/userProfile.html
@@ -4,10 +4,10 @@
 {% block content %} 
 
 <div>
-    <h1> <a href="#">{{ profile.username }}</a> </h1>
+    <h1> {{ profile.username }} </h1>   
     {% for story in user_story %}
-        <h2>{{ story.title }}</h2>
-        <h2>{{ story.author.username }}</h2>
+        <h2><a href="{% url 'news:story' story.id %}">{{ story.title }}, <br> {{ story.author.username }} </a></h2>
+    
         {% endfor %}
    
 </div>
