made search but have a broken upload button
made a search

tried to add an upload button for images in form.

still cannot edit/delete news stories added started code.

--- a/she_codes_news/news/templates/news/index.html
+++ b/she_codes_news/news/templates/news/index.html
@@ -9,6 +9,12 @@
 
 {% block content %}
 
+<form action="">
+  <input type="text" name="search" placeholder="Article look up" value="{{request.GET.search}}">
+  <input type="submit" value="Search">
+</form>
+
+
 {% if request.user.is_authenticated %}
 <a href="{% url 'news:newStory' %}">Write New story</a>
 
