--- a/she_codes_news/news/templates/news/createStory.html
+++ b/she_codes_news/news/templates/news/createStory.html
@@ -2,8 +2,9 @@
 
 {% block content %} 
 
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
+    {{ form.media }}
     {{ form.as_p }}
     <input type="submit" value="submit">
 </form>
