--- a/she_codes_news/news/templates/news/story.html
+++ b/she_codes_news/news/templates/news/story.html
@@ -10,9 +10,13 @@
 <div id="story-wrapper">
   <h2>{{ story.title }}</h2>
   <h4>{{ story.author }}</h4>
+
   <div id="story-content">
-    <img src="{% static '/news/images/placeholder-5.jpg' %}" />
+    <!-- <img src="{% static '/news/images/placeholder-5.jpg' %}" /> -->
     {{ story.content|linebreaks }}
+  </div>
+  <div>
+    <h4>{{ story.pub_date }}</h4>
   </div>
 </div>
 
