--- a/she_codes_news/news/templates/news/story.html
+++ b/she_codes_news/news/templates/news/story.html
@@ -10,9 +10,16 @@
 <div id="story-wrapper">
   <h2>{{ story.title }}</h2>
   <h4>{{ story.author }}</h4>
+  
 
   <div id="story-content">
-    <!-- <img src="{% static '/news/images/placeholder-5.jpg' %}" /> -->
+    {% if story.image_upload %}    
+    <img src="{{ story.image_upload.url  }}">    
+
+    {% else %}
+    <img src="{% static '/news/images/placeholder-5.jpg' %}" />
+    {% endif %} 
+
     {{ story.content|linebreaks }}
   </div>
   <div>
