got the datetime working and edit button

--- a/she_codes_news/news/templates/news/story.html
+++ b/she_codes_news/news/templates/news/story.html
@@ -23,7 +23,11 @@
     {{ story.content|linebreaks }}
   </div>
   <div>
-    <h4>{{ story.pub_date }}</h4>
+    
+     <h4>Last updated: {{ story.pub_update }} <br> Published:  {{ story.pub_date }} </h4>
+     <h4></h4>
+     
+
   </div>
 </div>
 
