--- a/she_codes_news/users/templates/users/userProfile.html
+++ b/she_codes_news/users/templates/users/userProfile.html
@@ -6,8 +6,10 @@
 <div>
     <h1> {{ profile.username }} </h1>   
     {% for story in profile.newsstory_set.all %}
-        <a href="{% url 'news:updateStory' story.id %}"> Edit </a>   
-        <h2><a href="{% url 'news:story' story.id %}">{{ story.title }}, <br> {{ story.author.username }} </a></h2> 
+       
+        <h2><a href="{% url 'news:story' story.id %}">{{ story.title }}, <br> {{ story.author.username }} </a></h2>
+        <a href="{% url 'news:updateStory' story.id %}"> Edit </a> <br> <a href="{% url 'news:deleteStory' story.id %}"> delete</a>
+        
         
         {% endfor %}
 
