article order fixed

--- a/she_codes_news/news/templates/news/index.html
+++ b/she_codes_news/news/templates/news/index.html
@@ -33,6 +33,8 @@
   {% endif %}
 </div>
 
+<h2>All Stories</h2>
+
 <div id="all-stories">
   {% if all_stories %} 
     {% for story in all_stories %}
