changed imagefield to urfield
due to heroku upload conflict

--- a/she_codes_news/news/templates/news/story.html
+++ b/she_codes_news/news/templates/news/story.html
@@ -10,10 +10,12 @@
 <div id="story-wrapper">
   <h2>{{ story.title }}</h2>
   <h4>{{ story.author }}</h4>
-  
+ 
 
   <div id="story-content">
-    {% if story.image_upload %}    
+    {% if story.image_upload %}
+    <img src="{{ story.image_upload }}">
+     
      
 
     {% else %}
