--- a/she_codes_news/news/templates/news/storyCard.html
+++ b/she_codes_news/news/templates/news/storyCard.html
@@ -9,7 +9,7 @@
         {% endif %}
         <div class="story-card-text">
             <h3>{{ story.title }}</h3>
-            <h4>{{ story.author }}</h4>
+            <h4><a href="{% url 'users:profile' pk=story.author.id %}" >{{ story.author }}</a></h4>
             <h4>Published: {{ story.pub_date }}</h4>
         </div>
     </a>
