--- a/she_codes_news/news/templates/news/story.html
+++ b/she_codes_news/news/templates/news/story.html
@@ -27,7 +27,10 @@
   <div>
     
      <h4>Last updated: {{ story.pub_update }} <br> Published:  {{ story.pub_date }} </h4>
-     <h4></h4>
+     <h4>Category {{ story.category }}</h4>
+
+    
+     
      
 
   </div>
