playing with CSS

--- a/she_codes_news/news/templates/news/storyCard.html
+++ b/she_codes_news/news/templates/news/storyCard.html
@@ -1,6 +1,6 @@
 <div class="story-card" id="story-card-{{ position }}">
     <a href="{% url 'news:story' story.id %}">
-        
+                
         {% if story.image_upload %}
             <img src="{{ story.image_upload }}">  
     
@@ -10,8 +10,9 @@
         {% endif %}
         <div class="story-card-text">
             <h3>{{ story.title }}</h3>
-            <h4><a href="{% url 'users:profile' pk=story.author.id %}" >{{ story.author }}</a></h4>
+            <h4><a href="{% url 'users:profile' pk=story.author.id %}">Written by: {{ story.author }}</a></h4>
             <h4>Published: {{ story.pub_date }}</h4>
         </div>
+       
     </a>
 </div>
