--- a/she_codes_news/users/templates/users/userProfile.html
+++ b/she_codes_news/users/templates/users/userProfile.html
@@ -7,9 +7,12 @@
     <h1> {{ profile.username }} </h1>   
     {% for story in profile.newsstory_set.all %}
        
-        <h2><a href="{% url 'news:story' story.id %}">{{ story.title }}</a></h2>
+        
+    <h2><a href="{% url 'news:story' story.id %}">{{ story.title }}</a></h2>
+        
+        {% if request.user.is_authenticated %}
         <a href="{% url 'news:updateStory' story.id %}"> Edit </a> | <a href="{% url 'news:deleteStory' story.id %}"> Delete</a>
-   
+        {% endif %} 
         {% endfor %}
 
         
