--- a/she_codes_news/news/templates/news/index.html
+++ b/she_codes_news/news/templates/news/index.html
@@ -9,14 +9,18 @@
 
 {% block content %}
 
+<div id="search-bar">
 <form action="">
   <input type="text" name="search" placeholder="Article look up" value="{{request.GET.search}}">
   <input type="submit" value="Search">
 </form>
+</div>  
+
+
 
 
 {% if request.user.is_authenticated %}
-<a href="{% url 'news:newStory' %}">Write New story</a>
+<a id="new_story" href="{% url 'news:newStory' %}">Write New story</a>
 
 {% endif %} 
 
