--- a/she_codes_news/static/styles.css
+++ b/she_codes_news/static/styles.css
@@ -8,7 +8,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid rgb(255, 255, 255);
+    border-bottom: 1px solid rgb(0, 0, 0);
     background-color: #8246AF;
 }
 
@@ -21,6 +21,7 @@ h1 {
     text-decoration: none;
     font-size: 4rem;
     margin: 0;
+    color: white;
 }
 
 h2 {
@@ -28,13 +29,19 @@ h2 {
 }
 
 h3 {
+    color: #000000;
     font-size: 2rem;
     margin: 0;
+}
+
+h4 {
+    color: rgb(196, 124, 58);
 }
 
 #header-text {
     flex-basis: 80%;
     display: flex;
+    
 }
 
 nav {
@@ -42,14 +49,48 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    
 }
 
 a {
     margin: 2px;
     text-decoration: none;
-    color: #000;
+    color:#131313
 }
 
 a, p {
     font-family: monospace;
+}
+
+#serach-bar {
+    display: flex;
+    margin-left: 20%;
+    background-color: #8246AF;
+
+
+}
+
+#new_story {
+    background-color: orange;
+    margin: 2px;
+    padding: 8px;
+    margin-left: 50%;
+    border-radius:10px;
+    color: rgb(231, 244, 255);  
+    text-decoration: solid underline; 
+    
+
+    /* display: flex; */
+   
+    /* display: flex;
+    
+    /* text-align: center;
+    margin: 5px;
+   
+    padding: 10px;
+    
+    font-size: 1rem; */
+   
+
+    
 }
