edited category view

--- a/she_codes_news/news/templates/news/storyCard.html
+++ b/she_codes_news/news/templates/news/storyCard.html
@@ -13,7 +13,7 @@
             <h4><a href="{% url 'users:profile' pk=story.author.id %}">Written by: {{ story.author }}</a></h4>
             <h4>Published: {{ story.pub_date }}</h4>
             {% if story.category %}
-            <h4>#{{ story.category }}</h4>
+            <h4><a href="{% url 'news:category' story.category.name %}">#{{ story.category }}</a></h4>
             {% else %}
             <h4>#Uncategorised</h4>
             {% endif %}
