--- a/she_codes_news/news/templates/news/index.html
+++ b/she_codes_news/news/templates/news/index.html
@@ -11,17 +11,15 @@
 
 <div id="search-bar">
 <form action="">
-  <input type="text" name="search" placeholder="Article look up" value="{{request.GET.search}}">
+  <input type="text" name="search" placeholder="stories, categories..." value="{{request.GET.search}}">
   <input type="submit" value="Search">
 </form>
 </div>
 
 
 
-
 {% if request.user.is_authenticated %}
 <a id="new_story" href="{% url 'news:newStory' %}">Write New story</a>
-
 {% endif %} 
 
 {% if latest_stories %}
@@ -34,19 +32,24 @@
         {% endfor %}
   {% else %}
   <p>No stories are available.</p>
+  {% endif %}
 </div>
-{% endif %}
 
+
+
+{% if all_stories %}
 <h2>All Stories</h2>
 
 <div id="all-stories">
-  {% if all_stories %} 
-    {% for story in all_stories %}
- {% include "./storyCard.html" with story=story %}
- {% endfor %} 
+ {% for story in all_stories %}
+    {% include "./storyCard.html" with story=story %}
+    {% endfor %} 
   {% else %}
   <p>No stories are available.</p>
-  {% endif %}
-</div>
+  {% endif %} 
+
+
+
+
 
 {% endblock %}
