added user edit

--- a/she_codes_news/news/templates/news/category_detail.html
+++ b/she_codes_news/news/templates/news/category_detail.html
@@ -4,26 +4,18 @@
 {% block content %} 
 
 <div>
-    <h2> {{ category.name }} </h2>   
+    <h2> Stories in {{ category.name }} </h2>   
 </div>
 
 
 
-<div> 
-    Stories:
+<div>   
 
     <ul>    
-    {% for story in category.stories.all %} 
-
-    
-    <li><h2><a href="{% url 'news:story' story.id %}">{{ story.title }}</a></h2></li>  
-        
-        {% if request.user == profile %}
-        <a href="{% url 'news:updateStory' story.id %}"> Edit </a> | <a href="{% url 'news:deleteStory' story.id %}"> Delete</a>
-        {% endif %} 
-        {% endfor %}
-    </ul> 
-        
+    {% for story in category.stories.all %}     
+    <li><h2><a href="{% url 'news:story' story.id %}">{{ story.title }}</a></h2></li>          
+       {% endfor %}
+    </ul>        
    
 </div>
 
