--- a/she_codes_news/news/templates/news/deleteStory.html
+++ b/she_codes_news/news/templates/news/deleteStory.html
@@ -8,6 +8,7 @@
     <p>Are you sure you want to delete "{{ object }}"?</p>
     {{ form.as_p }}
     <input type="submit" value="Confirm">
+    <a href="{% url 'users:profile' user.id %}">Cancel</a>
 </form>
 
 {% endblock %} 
