--- a/she_codes_news/users/templates/users/userProfile.html
+++ b/she_codes_news/users/templates/users/userProfile.html
@@ -4,28 +4,45 @@
 {% block content %} 
 
 <div>
-    <h2> {{ profile.username }} </h2>   
+    <h2> Welcome to {{ profile.username }}'s profile </h2>   
 </div>
 
 {% if request.user == profile %}
 <a id="new_story" href="{% url 'news:newStory' %}">Write New story</a>
 {% endif %} 
 
+<div>
+    <h3>Bio<h3>
+        {% if request.user == profile %}
+        <div><h3><a href="{% url 'users:updateProfile' user.id %}">Edit</a></h3></div>
+        {% endif %} 
+    <div>
+        {% if profile.bio %}
+        {{ profile.bio }}        
+        {% endif %}
+    </div>
+</div>
+
 
 <div> 
     My Stories:
 
-    <ul>    
-    {% for story in profile.newsstory_set.all %} 
-
-    
-    <li><h2><a href="{% url 'news:story' story.id %}">{{ story.title }}</a></h2></li>  
+        <ul>   
+        {% for story in profile.newsstory_set.all %} 
+        
+        <li><h2><a href="{% url 'news:story' story.id %}">{{ story.title }}</a></h2></li>  
         
         {% if request.user == profile %}
         <a href="{% url 'news:updateStory' story.id %}"> Edit </a> | <a href="{% url 'news:deleteStory' story.id %}"> Delete</a>
-        {% endif %} 
-        {% endfor %}
-    </ul> 
+        {% endif %}         
+        {% endfor %}       
+     </ul> 
+    
+     
+       
+
+
+    
         
    
 </div>
