--- a/she_codes_news/news/static/news/styles.css
+++ b/she_codes_news/news/static/news/styles.css
@@ -1,13 +1,15 @@
 .story-card {
-    margin: 2px;
-    border: 1px solid #000;
+    margin: 6px;
+    border-radius: 10px;
+    border-style: groove;
     padding: 5px;
 }
 
 .story-card img {
     width: 100%;
-    height: 300px;
+    height: 498px;
     object-fit: cover;
+    border-radius: 10px;
 }
 
 #latest-stories {
@@ -16,7 +18,8 @@
     grid-template-rows: 1fr 1fr 1fr;
     gap: 1px 1px;
     grid-template-areas: "left-1 right-1" "left-1 right-2" "left-1 right-3";
-    max-height: 500px;
+    max-height: 500px; 
+       
 }
 
 #story-card-1 {
@@ -48,18 +51,20 @@
 #story-card-3 .story-card-text h3,
 #story-card-4 .story-card-text h3 {
     font-size: 16px;
+    
 }
 
 #story-card-2 .story-card-text h4,
 #story-card-3 .story-card-text h4,
 #story-card-4 .story-card-text h4 {
     font-size: 12px;
+    
 }
 
 #story-card-2 img,
 #story-card-3 img,
 #story-card-4 img {
-    width: 33%;
+    width: 50%;
     height: 100%;
     margin-right: 5px;
 }
@@ -67,7 +72,8 @@
 #all-stories {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-between; 
+    
 }
 
 #all-stories .story-card {
@@ -83,4 +89,15 @@
     float: right;
     margin: 0 0 10px 10px;
     width: 50%;
+}
+#title-story {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 25%;
+}
+
+#categories
+{
+    color:blueviolet
 }
