--- a/she_codes_news/static/styles.css
+++ b/she_codes_news/static/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Poppins:ital,wght@0,500;1,400&family=The+Nautigal:wght@400;700&display=swap');
+
 
 body {
     background-color: rgb(240, 239, 239);
@@ -8,7 +9,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid rgb(0, 0, 0);
+    border-bottom: 6px solid rgb(0, 0, 0);
     background-color: #8246AF;
 }
 
@@ -17,7 +18,7 @@ header {
 } */
 
 h1 {
-    font-family: 'Montserrat Subrayada', sans-serif;
+    font-family: 'Poppins', sans-serif;
     text-decoration: none;
     font-size: 4rem;
     margin: 0;
@@ -25,7 +26,7 @@ h1 {
 }
 
 h2 {
-   font-family: 'Montserrat Subrayada', sans-serif; 
+   font-family: 'Poppins', sans-serif; 
 }
 
 h3 {
@@ -47,9 +48,15 @@ h4 {
 nav {
     flex-basis: 20%;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    
+    flex-direction: row;
+    justify-content: space-evenly;
+    text-decoration: underline;
+           
+}
+
+#nav-text {
+    color: white;
+    font-weight: bold;
 }
 
 a {
@@ -59,7 +66,7 @@ a {
 }
 
 a, p {
-    font-family: monospace;
+    font-family: poppins;
 }
 
 #serach-bar {
