--- a/she_codes_news/news/templates/news/story.html
+++ b/she_codes_news/news/templates/news/story.html
@@ -23,7 +23,7 @@
   <div>
     
     {% if story.category %}
-    <h4>#{{ story.category }}</h4>
+    <h4><a id='categories' href="{% url 'news:category' story.category.name %}">#{{ story.category }}</a></h4>
     {% else %}
     <h4>#Uncategorised</h4>
     {% endif %}
