--- a/she_codes_news/templates/base.html
+++ b/she_codes_news/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="description" content="" />
     <meta name="author" content="Aleksandra Simic" />
     <link
-      href="https://fonts.googleapis.com/css?family=Manjari&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}" />
@@ -21,7 +21,7 @@
       <div id="header-text">
         <a id="header-link" href="{% url 'news:index' %}">
           <h1>She {Codes} News</h1>
-        </a>
+        </a>        
       </div>
        <!-- include nav here -->
       {% include './nav.html' %}
