--- a/she_codes_news/news/templates/news/createStory.html
+++ b/she_codes_news/news/templates/news/createStory.html
@@ -6,8 +6,8 @@
     {% csrf_token %}
     {{ form.media }}
     {{ form.as_p }}
-    <input type="submit" value="submit">
-    <a href="{% url 'news:index' %}">Cancel</a>
+    <input type="submit" value="submit">    |
+    <a class="form-text" href="{% url 'news:index' %}">Cancel</a>
 </form>
 
 {% endblock %} 
