--- a/she_codes_news/news/templates/news/edit_story.html
+++ b/she_codes_news/news/templates/news/edit_story.html
@@ -7,7 +7,7 @@
     {{ form.media }}
     {{ form.as_p }}
     <input type="submit" value="submit">
-    <a href="{% url 'users:profile' user.id %}">Cancel</a>
+    <a class="form-text" href="{% url 'users:profile' user.id %}">Cancel</a>
 </form>
 
 {% endblock %} 
