--- a/she_codes_news/news/templates/news/index.html
+++ b/she_codes_news/news/templates/news/index.html
@@ -9,12 +9,10 @@
 
 {% block content %}
 
-<div id="search-bar">
-  <form action="">
-    <input type="text" name="search" placeholder="stories, categories..." value="{{request.GET.search}}">
-    <input type="submit" value="Search">
-  </form>
-  </div>
+<div>
+  {% include "./search.html" %}
+</div>
+
 
 {% if request.user.is_authenticated %}
 <a id="new_story" href="{% url 'news:newStory' %}">Write New story</a>
