--- a/she_codes_news/staticfiles/styles.css
+++ b/she_codes_news/staticfiles/styles.css
@@ -44,7 +44,7 @@ nav {
     align-items: flex-end;
 }
 
-a {
+/* a {
     margin: 2px;
     text-decoration: none;
     color: #000;
@@ -52,4 +52,4 @@ a {
 
 a, p {
     font-family: monospace;
-}
+} */
