--- a/she_codes_news/users/templates/users/createAccount.html
+++ b/she_codes_news/users/templates/users/createAccount.html
@@ -6,5 +6,6 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Create Account</button>
+    <a class="form-text" href="{% url 'news:index' %}">Cancel</a>
 </form>
 {% endblock %} 
