--- a/she_codes_news/users/templates/users/updateUser.html
+++ b/she_codes_news/users/templates/users/updateUser.html
@@ -6,5 +6,6 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">update</button>
+    <a class="form-text" href="{% url 'users:profile' user.id %}">Cancel</a>
 </form>
 {% endblock %} 
