--- a/she_codes_news/news/templates/news/index.html
+++ b/she_codes_news/news/templates/news/index.html
@@ -15,7 +15,7 @@
 
 
 {% if request.user.is_authenticated %}
-<a id="new_story" href="{% url 'news:newStory' %}">Write New story</a>
+<a class="new_story" href="{% url 'news:newStory' %}">Write New story</a>
 {% endif %} 
 
 
