--- a/she_codes_news/static/styles.css
+++ b/she_codes_news/static/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Poppins:ital,wght@0,500;1,400&family=The+Nautigal:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,600;1,900&display=swap');
 
 
 body {
@@ -6,11 +6,10 @@ body {
 }
 
 header {
-    display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 6px solid rgb(0, 0, 0);
-    background-color: #8246AF;
+    border-bottom: 6px solid #34174b;
+    background-color: #8146af;
 }
 
 /* img {
@@ -57,25 +56,44 @@ h4 {
 }
 
 #header-text {
-    flex-basis: 80%;
+    flex-basis: 85%;
     display: flex;
+    justify-content: space-evenly;
+    text-shadow: 0px 7px rgb(68, 6, 68);
     
 }
 
 
-nav {
-    flex-basis: 20%;
+#header_align {    
+    padding: 16px;
+    margin: 10px;
     display: flex;
-    flex-direction: row;
+}
+
+#header_Code {
+    color: orange;
+}
+
+
+
+
+nav {
+    display: flex;    
     justify-content: space-evenly;
     text-decoration: underline;
            
 }
 
-#nav-text {
+.nav-text {
     color: white;
     font-weight: bold;
 }
+
+
+.nav-text:hover {
+    color: orange;
+    }
+
 
 a {
     margin: 2px;
@@ -94,14 +112,25 @@ a, p {
 
 }
 
-#new_story {
+.new_story {
     background-color: orange;
-    margin: 2px;
+    display: flex;
     padding: 8px;
-    margin-left: 50%;
-    border-radius:10px;
-    color: rgb(231, 244, 255);  
-    text-decoration: solid underline; 
+    margin-left: 41%;
+    margin-right: 41%;
+    border-radius: 10px;
+    color: rgb(231, 244, 255);
+    text-decoration: solid underline;
+    justify-content: center; 
+    font-family:'Poppins', sans-serif;
+    font-weight: bold;
+    
+}
+
+.new_story:hover{
+    color: orange;
+    background-color: #8246AF;
+    
 
 }
 
