--- a/she_codes_news/templates/base.html
+++ b/she_codes_news/templates/base.html
@@ -20,8 +20,13 @@
     <header>
       <div id="header-text">
         <a id="header-link" href="{% url 'news:index' %}">
-          <h1>She {Codes} News</h1>
-        </a>        
+          <div id="header_align">
+          <h1>She<h1>
+          <h1 id="header_Code"> {Codes} <h1>
+          <h1> News</h1>
+          </div> 
+        </a> 
+              
       </div>
        <!-- include nav here -->
       {% include './nav.html' %}
