--- a/she_codes_news/templates/nav.html
+++ b/she_codes_news/templates/nav.html
@@ -1,10 +1,10 @@
 <nav>
-    <a id="nav-text" href="{% url 'news:index' %}">Home</a>
+    <a class="nav-text" href="{% url 'news:index' %}">Home</a>
     {% if request.user.is_authenticated %}
-        <a id="nav-text" href="{% url 'users:profile' user.id %}">Welcome {{ user.username }}!</a>
-        <a id="nav-text" href="{% url 'logout' %}">Logout</a>
+        <a class="nav-text" href="{% url 'users:profile' user.id %}">Welcome {{ user.username }}!</a>
+        <a class="nav-text" href="{% url 'logout' %}">Logout</a>
     {% else %}
-        <a id="nav-text" href="{% url 'login' %}">Login</a>
-        <a id="nav-text" href="{% url 'users:createAccount' %}">Register</a>        
+        <a class="nav-text" href="{% url 'login' %}">Login</a>
+        <a class="nav-text" href="{% url 'users:createAccount' %}">Register</a>        
     {% endif %}
 </nav>
