--- a/she_codes_news/templates/base.html
+++ b/she_codes_news/templates/base.html
@@ -18,6 +18,9 @@
 
   <body>
     <header>
+      <div>
+        <img src="{% static '/news/images/logo.jpg'%}"/>  
+      </div>
       <div id="header-text">
         <a id="header-link" href="{% url 'news:index' %}">
           <div id="header_align">
