--- a/she_codes_news/news/templates/news/deleteStory.html
+++ b/she_codes_news/news/templates/news/deleteStory.html
@@ -7,7 +7,7 @@
     {% csrf_token %}
     <p>Are you sure you want to delete "{{ object }}"?</p>
     {{ form.as_p }}
-    <input type="submit" value="Confirm">
+    <input class="form-text" type="submit" value="Confirm">
     <a class="form-text" href="{% url 'users:profile' user.id %}">Cancel</a>
 </form>
 
