--- a/she_codes_news/users/templates/registration/login.html
+++ b/she_codes_news/users/templates/registration/login.html
@@ -7,7 +7,7 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button class="form-text" type="submit">Login</button>
     <a class="form-text" href="{% url 'news:index' %}">Return to Home</a>
 </form>
 
