--- a/she_codes_news/news/static/news/styles.css
+++ b/she_codes_news/news/static/news/styles.css
@@ -3,10 +3,12 @@
     border-radius: 10px;
     border-style: groove;
     padding: 5px;
+    background-color: rgba(216, 216, 216, 0.671);
+ 
 }
 
 .story-card img {
-    width: 100%;
+    width: 98%;
     height: 498px;
     object-fit: cover;
     border-radius: 10px;
@@ -44,13 +46,20 @@
     display: flex;
     max-height: 120px;
     width: 100%;
-    height: 100%;
+    height: 100%;      
+   
 }
 
 #story-card-2 .story-card-text h3,
 #story-card-3 .story-card-text h3,
 #story-card-4 .story-card-text h3 {
     font-size: 16px;
+    font-weight: bold;
+    color: black;
+    text-decoration: underline;
+    
+    
+    
     
 }
 
@@ -59,6 +68,16 @@
 #story-card-4 .story-card-text h4 {
     font-size: 12px;
     
+    
+       
+}
+
+.story-card-text-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 #story-card-2 img,
@@ -95,14 +114,14 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding-top: 25%;
+    
 }
 
 #categories
 {
-    color:blueviolet
+    color:#8146af;
+    display: flex;
+    justify-content: flex-end;
+
 }
 
-#form_button {    
-    color: orange; 
-    text-decoration: solid underline; 
-}
