--- a/she_codes_news/news/templates/news/edit_story.html
+++ b/she_codes_news/news/templates/news/edit_story.html
@@ -6,7 +6,7 @@
     {% csrf_token %}
     {{ form.media }}
     {{ form.as_p }}
-    <input type="submit" value="submit">
+    <input class="form-text" type="submit" value="submit">
     <a class="form-text" href="{% url 'users:profile' user.id %}">Cancel</a>
 </form>
 
