--- a/she_codes_news/news/templates/news/search.html
+++ b/she_codes_news/news/templates/news/search.html
@@ -2,11 +2,12 @@
 
 {% block content %} 
 
-
-    <form action="">
+<div id="Sdeco">
+    <form  action="">
       <input type="text" name="search" placeholder="stories, categories..." value="{{request.GET.search}}">
-      <input type="submit" value="Search">
+      <input class="form-text" type="submit" value="Search">
     </form>
+  </div>
  
 
 {% endblock %} 
