--- a/she_codes_news/news/templates/news/storyCard.html
+++ b/she_codes_news/news/templates/news/storyCard.html
@@ -10,13 +10,15 @@
         {% endif %}
         <div class="story-card-text">
             <h3>{{ story.title }}</h3>
-            <h4><a href="{% url 'users:profile' pk=story.author.id %}">Written by: {{ story.author }}</a></h4>
+            <h4><a href="{% url 'users:profile' pk=story.author.id %}">Written by: {{ story.author }}</a></h4>            
+            <div class='story-card-text-wrap'>
             <h4>Published: {{ story.pub_date }}</h4>
             {% if story.category %}
             <h4><a id='categories' href="{% url 'news:category' story.category.name %}">#{{ story.category }}</a></h4>
             {% else %}
             <h4 id='categories'>#Uncategorised</h4>
             {% endif %}
+            </div>
         </div>
        
     </a>
