--- a/she_codes_news/users/templates/users/createAccount.html
+++ b/she_codes_news/users/templates/users/createAccount.html
@@ -5,7 +5,7 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Create Account</button>
+    <button class="form-text" type="submit">Create Account</button>
     <a class="form-text" href="{% url 'news:index' %}">Cancel</a>
 </form>
 {% endblock %} 
