--- a/she_codes_news/news/templates/news/index.html
+++ b/she_codes_news/news/templates/news/index.html
@@ -13,6 +13,11 @@
   {% include "./search.html" %}
 </div>
 
+{% if request.user.is_authenticated %}
+<a class="new_story" href="{% url 'news:newStory' %}">Write New story</a>
+{% endif %}
+<div>
+
 
 
 {% if latest_stories %}
